# plutus-playground-backend

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Readme.md
server/: index.js  package-lock.json  package.json
server/tests/: test.js
templates/: cabal.project  playground-plutus.cabal
