cabal-version:   3.0
name:            playground-plutus
version:         0.1.0.0
license:
build-type:      Simple
extra-doc-files: README.md

common options
  ghc-options: -Wall
  default-language: Haskell2010

executable playground-plutus
  import:           options
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
    , base
    , bytestring
    , containers
    , plutus-core ^>=1.36.0.0
    , plutus-ledger-api ^>=1.36.0.0
    , plutus-tx ^>=1.36.0.0
    , plutus-tx-plugin ^>=1.36.0.0