cabal-version:   3.0
name:            playground-plutus
version:         0.1.0.0
license:
build-type:      Simple
extra-doc-files: README.md

common options
  ghc-options: -Wall
  default-language: Haskell2010

executable playground-plutus
  import:           options
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
    , base
    , bytestring
    , containers
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin